--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 __pycache__
 
 
+# private files #
+_t*
+
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
